Fixed user profiles not showing up

--- a/stylus.css
+++ b/stylus.css
@@ -42,7 +42,7 @@
     padding-top: 0px;
 }
 
-.block {
+.p-body-pageContent.block {
     display: none;
 }
 
